[gd_scene load_steps=8 format=3 uid="uid://cksuehbo3dnm1"]

[ext_resource type="Texture2D" uid="uid://dleown0m1k8xh" path="res://assets/kenney_pico-8-platformer/Transparent/Tilemap/tilemap_packed.png" id="1_mkf8s"]
[ext_resource type="Script" uid="uid://l7q2ua68j" path="res://scripts/bullet.gd" id="1_y25gk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y25gk"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l5glv"]
radius = 31.016125

[sub_resource type="Animation" id="Animation_y25gk"]
resource_name = "Explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion/ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion/ExplosionSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.43529412), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l5glv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion/ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion/ExplosionSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.29803923)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eoqba"]
_data = {
&"Explosion": SubResource("Animation_y25gk"),
&"RESET": SubResource("Animation_l5glv")
}

[node name="Bullet" type="Node2D"]
script = ExtResource("1_y25gk")

[node name="BulletSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_mkf8s")
region_enabled = true
region_rect = Rect2(42, 50, 3.9451332, 4.0579834)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HitBoxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_y25gk")

[node name="Explosion" type="Area2D" parent="."]

[node name="ExplosionSprite" type="Sprite2D" parent="Explosion"]
visible = false
modulate = Color(1, 1, 1, 0.29803923)
scale = Vector2(15, 15.5)
texture = ExtResource("1_mkf8s")
region_enabled = true
region_rect = Rect2(42, 50, 4, 4)

[node name="ExplosionShape" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_l5glv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eoqba")
}

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
